--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-chart-kit": "^3.2.1",
     "react-native-maps": "~0.24.0",
+    "react-native-svg": "~9.5.1",
     "react-native-web": "^0.11.4"
   },
   "devDependencies": {
