--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-chart-kit": "^3.2.1",
     "react-native-maps": "~0.24.0",
     "react-native-svg": "~9.5.1",
+    "react-native-svg-charts": "^5.3.0",
     "react-native-web": "^0.11.4"
   },
   "devDependencies": {
