--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-chart-kit": "^3.2.1",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "~0.24.0",
+    "react-native-reanimated": "~1.1.0",
     "react-native-svg": "~9.5.1",
     "react-native-svg-charts": "^5.3.0",
-    "react-native-web": "^0.11.4"
+    "react-native-web": "^0.11.4",
+    "react-navigation": "^4.0.0",
+    "react-navigation-drawer": "^2.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
