--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native-svg-charts": "^5.3.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.0",
-    "react-navigation-drawer": "^2.0.1"
+    "react-navigation-drawer": "^2.0.1",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
